--- a/frontend/mlm-angular/src/index.html
+++ b/frontend/mlm-angular/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>demo domain  - Investor's Panel </title>
+  <title>Simpact MLM </title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
